<resources>
    <string name="app_name">National Bank Ltd.</string>
    <string name="title_exit_dialog">Do you want to exit?</string>
    <string name="dialog_confirm_text">YES</string>
    <string name="dialog_cancel_text">NO</string>
    <string name="drawer_menuigation_drawer_open">Open drawer_menuigation drawer</string>
    <string name="drawer_menuigation_drawer_close">Close drawer_menuigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string-array name="drawer_menu_item_activity_titles">
        <item><![CDATA[Products & Services]]></item>
        <item>Financial Status</item>
        <item>Service Location</item>
        <item>Overseas Operation</item>
        <item>About Us</item>
        <item>CSR</item>
        <item>Career</item>
        <item><![CDATA[News & Events]]></item>
        <item>Daily Exchange Rate</item>
        <item>Contact Us</item>
        <item>Complain Cell</item>
    </string-array>
    <string-array name="deposit_products_item">
        <item>Savings Deposit</item>
        <item>Current Deposit</item>
        <item>Term(Special Notice) Deposit</item>
        <item>Term(Fixed) Deposit</item>
        <item>Foreign Currency(RFC) Deposit</item>
        <item>Foreign Currency()NFC Deposit</item>
        <item>Monthly Savings Scheme</item>
        <item>Monthly Income Scheme</item>
        <item>Double Benefit Scheme</item>
        <item>Millionaire Income Scheme</item>
        <item>Apon Thikana Shanchoy Prakalpa (ATSP)</item>
        <item>Luxury Savings Deposit Scheme (LSDS)</item>
    </string-array>
    <string-array name="deposit_products_content" formatted="false">
        <item><![CDATA[National Bank Limited offers customers a hassel free and low charges savings account through the branches all over bangladesh.<BR/><BR/><b>BENEFITS (CONDITION APPLY)</b><BR/><b>1. </b><a href=\"http://www.nblbd.com/deposit_int_rate.php\">Click here to see</a> Interest Rate<BR/><b>2. </b><a href=\"http://www.nblbd.com/shedule_of_charges.php\">Click here to see</a> Minimum Balance & Maintenance Charges<BR/><b>3. </b>No hidden costs.<BR/><b>4. </b>Standing Instruction Arrangement are available for operating account.]]></item>
        <item><![CDATA[National Bank Limited offers customers current deposit facility for day-to-day business transcaction without any restriction.<BR/><BR/><b>BENEFITS (CONDITION APPLY)</b><BR/><b>1. </b><a href=\"http://www.nblbd.com/deposit_int_rate.php\">Click here to see</a> Interest Rate<BR/><b>2. </b><a href=\"http://www.nblbd.com/shedule_of_charges.php\">Click here to see</a> Minimum Balance & Maintenance Charges<BR/><b>3. </b>Standing Instruction Arrangement are available for operating account.<BR/><b>4. </b>Easy access to our other facilities.]]></item>
        <item><![CDATA[National Bank Limited offers interest on customer\'s special notice deposit account and gives facility to withdraw money any time.<BR/><BR/><b>BENEFITS (CONDITION APPLY)</b><BR/><b>1. </b><a href=\"http://www.nblbd.com/deposit_int_rate.php\">Click here to see</a> Interest Rate<BR/><b>2. </b><a href=\"http://www.nblbd.com/shedule_of_charges.php\">Click here to see</a> Minimum Balance & Maintenance Charges<BR/><b>3. </b>Standing Instruction Arrangement are available for operating account.]]></item>
        <item><![CDATA[National Bank Limited offers fixed term savings that will scale up your savings amount wtih the time.<BR/><BR/><b>BENEFITS (CONDITION APPLY)</b><BR/><b>1. </b><a href=\"http://www.nblbd.com/deposit_int_rate.php\">Click here to see</a> Interest Rate<BR/><b>2. </b>Any amount can be deposited.<BR/><b>3. </b>Premature encashment facility is available.<BR/><b>4. </b>Overdraft facility available against term receipt.]]></item>
        <item><![CDATA[National Bank Limited gives opportunity to maintain foreign currency account thorugh it\'s Authorized Delear Branches.Bangladesh nationals residing abroad or Foreign nationals residing abroad or Bangladesh and foreign firms operating in Bangladesh or abroad or Foreign missions and their expatriate employees.<BR/><BR/><b>BENEFITS (CONDITION APPLY)</b><BR/><b>1. </b>No initial deposit is required to open the account.<BR/><b>2. </b>Interest will be offered 1.75% for US Dollar Account , 3.00 % for EURO Account and 3.25% for GBP Account.<BR/><b>3. </b>They will get interest on daily product basis on the credit balance (minimum balance of US$ 1,000/- or GBP 500/- at least for 30 days) maintaining in the account.]]></item>
        <item><![CDATA[National Bank Limited gives opportunity to maintain foreign currency account thorugh it\'s Authorized Delear Branches. All non – resident Bangladeshi nationals and persons of Bangladesh origin including those having dual nationality and ordinarily residing abroad may maintain interest bearing NFCD Account.<BR/><BR/><b>BENEFITS (CONDITION APPLY)</b><BR/><b>1. </b>NFCD Account can be opened for One month, Three months, Six months and One Year through US Dollar, Pound Starling, Japanese Yen and Euro.<BR/><b>2. </b>The initial minimum amount of $1000 or 500 Pound Starling or equivalent other designated currency.<BR/><b>3. </b>Interest is paid on the balance maintain in the Account. This interest is tax free in Bangladesh.]]></item>
        <item><![CDATA[National Bank Limited offers monthly savings scheme for it\'s retail customers.<BR/><BR/><b>BENEFITS (CONDITION APPLY)</b><BR/><b>1. </b>Monthly installments of deposit will be Tk.500/-, Tk.1,000/- , Tk.2,000/- ,Tk.3,000, Tk.4000/- , Tk.5,000/- , Tk.10,0000/- , Tk.20,0000/- ,Tk.30,0000/- ,Tk.50,0000/-.<BR/><b>2. </b>Account may be opened for any installment and term , which is not changeble.<BR/><b>3. </b>A person is allowed to open more than one account for different installment in a Branch/ Bank.]]></item>
        <item><![CDATA[Under this scheme one will deposit a minimum of Tk.1,00,000/- or its multiple up to Tk.10,000,000/-.]]></item>
        <item><![CDATA[Dreams come true. National Bank Limited now offers Double Benefit Account for it\'s customers. The benefits under this scheme shall become double after 09 (Nine) years 06 (Six) months.<BR/><BR/><b>BENEFITS (CONDITION APPLY)</b><BR/><b>1. </b>Deposit of Tk.1,00,000/- and its multiple with out any upper limit shall be acceptable under this scheme.<BR/><b>2. </b>A person is allowed to open more than one Double Benefit Account.<BR/><b>3. </b>The account may be opened either singly or jointly.<BR/><b>4. </b>All Double Benefit Account holder shall be offered with free Life Insurance Policy under this scheme.]]></item>
        <item><![CDATA[Under this scheme one will deposit a fixed amount on monthly basis for 4, 6, 9 or 12 years and on maturity he/she will be just a millionaire.<BR/><BR/><b>BENEFITS (CONDITION APPLY)</b><BR/><b>1. </b>Deposit of fixed monthly amount for 4, 6, 9 or 12 years. Deposit size will be based on tenure. Upon maturity the depositor will get Tk. 10,00,000/-.<BR/><b>2. </b>A person is allowed to open more than one MDS Account.<BR/><b>3. </b>The account may be opened either singly or jointly.]]></item>
        <item><![CDATA[<b>BENEFIT FEATURES:</b><BR/><b>1. </b>The maturity period of the deposit will be 5, 8 & 10 years.<BR/><b>2. </b>Upon maturity, the depositor either can en-cash the terminal amount, or can apply for loan facility, up to 100% of the terminal amount, for the purpose of purchasing Flat at the prevailing rate of interest of the bank after complying with the procedures, terms & conditions of the Bank.<BR/><b>3. </b>Loan facility up to 80% of the amount received from the customer can be availed at the prevailing rate of the Bank during the scheme period.<BR/><b>4. </b>Locker facilities can be availed at 50% rent for the first year subject to the availability of locker facility in the respective branch.]]></item>
        <item><![CDATA[<b>BENEFIT FEATURES:</b><BR/><b>1. </b>The maturity period of the deposit will be 2, 3, 4 & 5 years.<BR/><b>3. </b>Loan facility up to 80% of the amount received from the customer can be availed at the prevailing rate of the Bank during the scheme period.<BR/><b>4. </b>Locker facilities can be availed at 50% rent for the first year subject to the availability of locker facility in the respective branch.]]></item>
    </string-array>
    <string name="drawer_menu_about_us_text">About Us</string>
    <string name="drawer_menu_product_services_text"><![CDATA[Products & Services]]></string>
    <string name="drawer_menu_financial_status_text">Financial Status</string>
    <string name="drawer_menu_service_location_text">Service Location</string>
    <string name="drawer_menu_overseas_operation_text">Overseas Operation</string>
    <string name="drawer_menu_csr_text">CSR</string>
    <string name="drawer_menu_contact_us_text">Contact Us</string>
    <string name="drawer_menu_daily_exchange_rate_text">Daily Exchange Rate</string>
    <string name="drawer_menu_complain_cell_text">Complain Cell</string>
    <string name="drawer_menu_news_events_text"><![CDATA[News & Events]]></string>
    <string name="drawer_menu_career_text">Career</string>
    <string name="main_menu_web_mail_text">Web Mail</string>
    <string name="main_menu_exit_app_text">Exit App</string>
    <string name="main_menu_about_developer_text">About Developer</string>
    <string name="main_menu_search_text">Search</string>
</resources>