<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/main_menu_search_text"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_web_mail"
        android:orderInCategory="100"
        android:title="@string/main_menu_web_mail_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_about_developer"
        android:orderInCategory="101"
        android:title="@string/main_menu_about_developer_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_exit_app"
        android:orderInCategory="102"
        android:title="@string/main_menu_exit_app_text"
        app:showAsAction="never" />
</menu>
